-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0, 5.7.0 Beta
-
None
-
wayland(egl vivante) 1.9 (1.10),
weston(desktopshell) 1.9 (1.10),
libinput 1.14 (1.2.4)
yocto krogoth
Without a connected keyboard it is not possible to get activeWindow (qApp->activeWindow) which has focus. But if a keyboard is connected this works.
- relates to
-
QTBUG-53703 Touch freeze after activating combox using wayland and weston
-
- Closed
-
For Gerrit Dashboard: QTBUG-53702 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
161147,9 | Use xdg_shell configure events to determine active window | 5.6 | qt/qtwayland | Status: MERGED | -2 | 0 |
222255,7 | Client: Add acked configure support and implement it for xdg-shell v6 | dev | qt/qtwayland | Status: MERGED | -2 | 0 |